--- a/test/index.html
+++ b/test/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Test</title>
 </head>
 <body>
-$END$
+<h1>Test</h1>
+<script type="text/javascript"
+        src="https://edftechnology.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-xmbazy/b/21/a44af77267a987a660377e5c46e0fb64/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=5167e040"></script>
 </body>
 </html>
