--- a/cv04/VirusOutbreak/index.html
+++ b/cv04/VirusOutbreak/index.html
@@ -12,6 +12,7 @@
 <div>
     <div class="navigation">
         <button id="new-game">New Game</button>
+        <button id="restart-game">Restart Game</button>
     </div>
     <canvas id="cmap" width="950" height="620"
             style="border:1px solid #d3d3d3;"></canvas>
