--- a/cv04/VirusOutbreak/index.html
+++ b/cv04/VirusOutbreak/index.html
@@ -18,8 +18,9 @@
             style="border:1px solid #d3d3d3;"></canvas>
     <div class="score-board">
         <div>
-            Score: <span id="score">0</span><br>
-            Missed: <span id="missed">0</span>
+            <p>Score: <span id="score">0</span></p>
+            <p>Missed: <span id="missed">0</span></p>
+            <p>Total viruses killed: <span id="killed">0</span></p>
         </div>
 
     </div>
